# zkusd-protocol

./: .gitignore  .vercel-build-trigger  ARCHITECTURE.md  BOS_HACKATHON_RESEARCH.md  Cargo.toml  DEFI_INFRASTRUCTURE_ANALYSIS.md  DEPLOYMENT.md  FRONTEND_ACCESSIBILITY_PLAN.md  HACKATHON_SUBMISSION.md  IDEAS_GANADORAS.md  IMPLEMENTATION_PLAN.md  LIQUITY_ANALYSIS.md  MAKERDAO_ANALYSIS.md  MARKET_ANALYSIS.md  MEZO_ANALYSIS.md  Makefile  NEXT_STEPS.md  PITCH.md  PITCH_DECK.md  PITCH_SCRIPT.md  README.md  RESEARCH.md  RESPONSIVE_DESIGN.md  SOROBAN_ANALYSIS.md  SUBMISSION_FORM_TEXT.md  TECHNICAL_RESOURCES.md  TRANSACTION_FLOW_ANALYSIS.md  VISION.md  ZKUSD_ARCHITECTURE.md  biome.json  bitcoin-testnet4.conf  build-manifest.json  package-lock.json  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.cargo/: config.toml
.github/workflows/: ci.yml
apps/web/: .env.example  .gitignore  next.config.ts  package.json  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
apps/web/e2e/: home.spec.ts  open-vault.spec.ts  wallet.spec.ts
apps/web/playwright-report/: index.html
apps/web/public/: robots.txt
apps/web/public/wasm/: README.md  vault-manager-v2-app.wasm  zkusd-price-oracle-app.wasm  zkusd-stability-pool-app.wasm  zkusd-token-app.wasm  zkusd-vault-manager-app.wasm
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx  sitemap.ts
apps/web/src/components/: action-card.tsx  adjust-vault-modal.tsx  close-vault-modal.tsx  error-boundary.tsx  header.tsx  index.ts  my-vaults.tsx  open-vault-form.tsx  protocol-stats.tsx  unisat-mobile-instructions.tsx  vault-dashboard.tsx
apps/web/src/config/: constants.ts
apps/web/src/lib/: sdk.ts  (+13 more)
charms-std/: CONTRIBUTION_STRATEGY.md  README.md
charms-std/primitives/: flash_mint.rs
contracts/: BUILDING.md
contracts/common/: Cargo.toml
contracts/common/src/: access_control.rs  advanced_ops.rs  beaming.rs  charms_ops.rs  constants.rs  emergency.rs  errors.rs  events.rs  flash.rs  governance.rs  integration_tests.rs  leverage.rs  lib.rs  lightning.rs  liquidation.rs  math.rs  multicollateral.rs  oracle.rs  psm.rs  rate_limiter.rs  stability_pool.rs  stress.rs  tests.rs  token_ops.rs  types.rs  validation.rs  vault_manager.rs
contracts/price-oracle/: Cargo.toml
contracts/price-oracle/src/: charms.rs  lib.rs  main.rs
contracts/stability-pool/: Cargo.toml
contracts/stability-pool/src/: charms.rs  lib.rs  main.rs
contracts/vault-manager/: Cargo.toml
contracts/vault-manager/src/: charms.rs  lib.rs  main.rs
contracts/zkusd-token/: Cargo.toml
contracts/zkusd-token/src/: charms.rs  lib.rs  main.rs
deployments/testnet4/: commit_new.hex  contracts.json  deployment-config.json  deployment-status.json  reveal_new.hex  wallet.json
deployments/testnet4/archive/: README.md  deploy-spell.yaml  deploy-vault-manager-v2-fixed.yaml  deploy-vault-manager-v2.yaml  mint-zkusd-v1.yaml  mint-zkusd-v2.yaml  mint-zkusd-v3.yaml  mint-zkusd-v4.yaml  mint-zkusd-v5.yaml  open-vault-full-v1.yaml  open-vault-minimal.yaml  open-vault-simple.yaml  open-vault-spell.yaml  open-vault-v2.yaml  open-vault-v3.yaml  open-vault-v4.yaml  open-vault-v5.yaml  open-vault-v6.yaml  open-vault-v7.yaml  open-vault-v8.yaml  stability-pool-result.json  vault-manager-result.json
deployments/testnet4/pending/: deploy-oracle-v2.yaml  deploy-spell.yaml  deploy-token-v4.yaml  deploy-token-v5.yaml  deploy-token-v6.yaml  deploy-token-v7.yaml  deploy-token-v8.yaml  deploy-vault-manager-v3.yaml  deploy-vault-manager-v4.yaml  deploy-vault-manager-v5.yaml  deploy-vault-manager-v6.yaml  open-vault-v9-simple.yaml  open-vault-v9.yaml  set-minter-template.yaml  set-minter-v2.yaml  set-minter-v3.yaml  set-minter-v4.yaml  set-minter.yaml
docs/: API.md  ARCHITECTURE.md  CHARMS_DEPLOYMENT_FIX.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-STATUS.md  DEPLOYMENT_GUIDE.md  FRONTEND_PLAN.md  UTXO_NATIVE_DESIGN.md
scripts/: build_reveal_tx.py  deploy-all-contracts.ts  deploy-contract.ts  deploy-contracts.ts  deploy-remaining.ts  deploy.sh  deploy.ts  generate-spell.sh  indexer.sh  init-protocol.sh  setup-testnet4.sh  sign-and-broadcast.ts  sign-deploy.ts  sign-oracle-v2.ts  sign-token-v5.ts  sign-token-v6.ts  sign-vault-manager-v3.ts  sign-vm-v4.ts  split-utxos.ts  test-open-vault.sh  wait-for-funds.sh  zkusd-cli.sh
scripts/archive/: README.md  build-wasm.sh  build.sh  check-balance.sh  complete-reveal.sh  deploy-charm.sh  deploy-light.sh  deploy-oracle.sh  deploy-production.sh  deploy-spell.sh  deploy-v4-contracts.sh  deploy-vault-manager-v5.ts  deploy.sh  generate-wallet-signet.py  generate-wallet.py  monitor.sh  prove-and-mint-zkusd.sh  prove-mint-zkusd.py  prove-mint-zkusd.sh  prove-open-vault-v8.py  redeploy-v4.sh  run-operation.sh  sign-and-broadcast.py  sign-spell.ts  test-deploy-oracle.ts  test-e2e.sh  zkusd-menu.sh
scripts/deploy/: build-all.sh  deploy-all.sh  deploy-contract.sh
scripts/lib/: bitcoin-signer.ts
spells/: DEPLOYMENT_STATUS.md  SPELL_TEMPLATE.yaml  adjust-vault.yaml  atomic-rescue.yaml  close-vault.yaml  deploy-oracle-live.yaml  deploy-stability-pool.yaml  deploy-token-fresh.yaml  deploy-token-v2.yaml  deploy-token.yaml  deploy-vault-manager.yaml  deploy-vm-fresh.yaml  flash-mint.yaml  init-oracle.yaml  init-stability-pool.yaml  init-token.yaml  init-vault-manager.yaml  insurance-mint.yaml  insurance-trigger.yaml  liquidate.yaml  open-vault.yaml  redeem.yaml  reinit-token.yaml  stability-deposit.yaml  stability-withdraw.yaml  transfer-zkusd.yaml
spells/archive/: deploy-oracle-fresh.yaml  deploy-oracle-minimal.yaml  deploy-oracle-v2.yaml  deploy-oracle.yaml  deploy-vm-v2.yaml  reinit-vault-manager.yaml
spells/deploy/: stability-pool.json  vault-manager.json  zkusd-token.json
spells/ops/: adjust-vault-template.yaml  close-vault-template.yaml  liquidate-template.yaml  open-vault-template.yaml  open-vault-test.yaml  redeem-template.yaml  stability-deposit-template.yaml  transfer-zkusd-template.yaml  update-oracle-template.yaml  withdraw-sp-template.yaml
(+101 files in other folders)
