[package]
name = "zkusd-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []
# Network features - use "mainnet" for production deployments
mainnet = []

[dependencies]
serde = { workspace = true }
borsh = { workspace = true }
sha2 = { workspace = true }

[lib]
crate-type = ["rlib"]
